mule-user-guide/v/3.5/web-service-consumer-reference.adoc
=  Web服务消费者参考
:keywords: anypoint studio, studio, mule esb, connector, endpoint, web service, soap, wsdl


以前称为*SOAP Connector*的组件现在称为CXF组件。它不应该与Web服务使用者混淆。

== 元素和属性

[%header%autowidth.spread]
|===
| Studio Palette  | XML元素 |使用
| *Web Service Consumer*  | `ws:consumer`  |用于从Mule应用程序中使用SOAP Web服务。
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *`ws:consumer`*  | `doc:name`  |消息处理器的唯一标识符 | x  |为Web服务消费者元素定义唯一标识符。 （工作室要求）
|   | `config-ref`  |全局Web服务使用者的名称 | x  |标识全局Web服务使用者连接器的名称consumer-config关于连接和安全细节的`ws:consumer`参考。
在Web服务调用期间执行的|   | `operation`  |操作 | x  |标识Web服务调用期间要执行的操作;从WSDL中提取的默认值。
|===

[source,xml, linenums]
----
<ws:consumer config-ref="OrderWS" operation="login" doc:name="Login"/>
----

== 全局元素

[%header%autowidth.spread]
|===
| Studio Visual Editor  | XML元素 |使用
| *Global Web Service Consumer*  | `ws:consumer-config`  |用于标识Web服务的WSDL，并定义使用Web服务所需的任何安全设置。
|===

[%header%autowidth.spread]
|===========
|元素 |属性 |值 |属性需求 |属性描述
| *`ws:consumer-config`*  | `name`  |唯一名称 | x  |为可由消息引用的全局元素定义唯一标识符处理器。
|   | `doc:name`  |显示名称 | x  |为Web服务使用者全局元素定义显示名称。 （工作室要求）
|   | `wsdlLocation`  |文件路径和文件名或URL  | x  |标识您正在使用的Web服务的WSDL的位置。
|   | `service`  | Web服务的名称 | x  |通过名称标识Web服务本身。
|   | `port`  |名称或端口号 | x  |标识您通过其连接到Web服务的端口。
|   | `serviceAddress`  |网址 | x  |标识Web服务的URL。
|   | `connector-ref`  |连接器名称 |   |引用ws：consumer-config元素借用配置详细信息的另一个全局连接器。如果指定，则为创建连接到Web服务的Web服务使用者使用引用的连接器。该连接器必须支持serviceAddress中指定的协议。
|===========

[%header%autowidth.spread]
|========
| Studio  | XML子元素 |使用
根据Web服务本身的要求，用于将安全设置应用于Web服务使用者。| *Security tab of Global Web Service Consumer*  | `ws:security`  |
|========

[%header%autowidth.spread]
|===
| Studio  | XML子元素 |使用
| *Security tab of Global Web Service Consumer*  | `ws:wss-username-token`  |用于将用户名令牌设置应用于Web服务使用者。
|===

[%header%autowidth.spread]
|=======
|子元素 |属性 |值 |属性需求 |属性描述
| *`ws:wss-username-token`*  |用户名 |用户名 | x  |定义访问Web服务的用户名;添加到发送到Web服务的请求的头部。
|   |密码 |密码 | x  |定义访问Web服务的密码;添加到发送到Web服务的请求的头部。
|   | passwordType  | DIGEST或TEXT  | x  |标识密码的类型。
|   | addCreated  | true或false  |   |指定是否向Web服务请求添加"Created"标头。
|   | addNonce  | true或false  |   |指定是否向Web服务请求添加"Nonce"标头。
|=======

[%header%autowidth.spread]
|=================
|子元素 |属性 |值 |属性需求 |属性描述
| *`ws:wss-timestamp`*  |到期 |   | x  |定义请求保持有效的从创建点开始的秒数到Web服务。
|=================

[source, code, linenums]
----
...
    <ws:consumer-config name="OrderWS" wsdlLocation="enterprise.wsdl.xml" service="OrderService" port="Soap" serviceAddress="https://login.orderservice.com/services/Soap/c/22.0" doc:name="Web Service Consumer">
        <ws:security>
            <ws:wss-username-token username="test" password="test" passwordType="DIGEST" addCreated="true" addNonce="true"/>
            <ws:wss-timestamp expires="30000"/>
        </ws:security>
    </ws:consumer-config>
...
----

== 完整的代码示例

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:final+flow.png[final+flow]
....
[tab,title="XML Editor"]
....
[source,xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
 
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:ws="http://www.mulesoft.org/schema/mule/ws" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
 
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0"
 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 
http://www.mulesoft.org/schema/mule/ws http://www.mulesoft.org/schema/mule/ws/current/mule-ws.xsd
 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
 
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
 
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
 
    <ws:consumer-config name="Web_Service_Consumer" wsdlLocation="tshirt.wsdl.xml" service="TshirtService" port="TshirtServicePort" serviceAddress="http://tshirt-service.qa2.cloudhub.io/tshirt-service" doc:name="Web Service Consumer"/>
 
    <data-mapper:config name="xml_listinventoryresponse__to_json" transformationGraphPath="xml_listinventoryresponse__to_json.grf" doc:name="xml_listinventoryresponse__to_json"/>
 
    <data-mapper:config name="json_to_xml_ordertshirt_" transformationGraphPath="json_to_xml_ordertshirt_.grf" doc:name="json_to_xml_ordertshirt_"/>
 
    <data-mapper:config name="xml_ordertshirtresponse__to_json" transformationGraphPath="xml_ordertshirtresponse__to_json.grf" doc:name="xml_ordertshirtresponse__to_json"/>
 
    <data-mapper:config name="string_to_xml_authenticationheader_" transformationGraphPath="string_to_xml_authenticationheader_.grf" doc:name="string_to_xml_authenticationheader_"/>
 
    <flow name="orderTshirt" doc:name="orderTshirt">
        <http:inbound-endpoint host="localhost" port="8081" path="orders">
            <http:response-builder statusCode="200"/>
        </http:inbound-endpoint>
        <data-mapper:transform config-ref="json_to_xml_ordertshirt_" doc:name="JSON To Xml&lt;OrderTshirt&gt;"/>
        <set-variable variableName="apiKey" value="#['abc12345']" doc:name="Set API Key"/>
        <data-mapper:transform config-ref="string_to_xml_authenticationheader_" input-ref="#[flowVars[&quot;apiKey&quot;]]" target="#[message.outboundProperties[&quot;soap.header&quot;]]" doc:name="String To Xml&lt;AuthenticationHeader&gt;"/>
        <ws:consumer config-ref="Web_Service_Consumer" operation="OrderTshirt" doc:name="Order Tshirt"/>
        <data-mapper:transform config-ref="xml_ordertshirtresponse__to_json" doc:name="Xml&lt;OrderTshirtResponse&gt; To JSON" returnClass="java.lang.String"/>
    </flow>
 
    <flow name="listInventory" doc:name="listInventory">
        <http:inbound-endpoint host="localhost" port="8081" path="inventory">
            <http:response-builder statusCode="200"/>
        </http:inbound-endpoint>
        <ws:consumer config-ref="Web_Service_Consumer" operation="ListInventory" doc:name="List Inventory"/>
        <data-mapper:transform config-ref="xml_listinventoryresponse__to_json" returnClass="java.lang.String" doc:name="Xml&lt;ListInventoryResponse&gt; To JSON"/>
    </flow>
 
</mule>
----
....
------
